[tool.poetry]
name = "pymupdf4llm"
version = "0.0.11"
description = "PyMuPDF Utilities for LLM/RAG"
authors = ["Artifex <support@artifex.com>"]
license = "GNU AFFERO GPL 3.0"
readme = "README.md"
packages = [
    { include = "pymupdf4llm", from = "." },
]
keywords = ["pymupdf", "rag", "llm", "pdf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
repository = "https://github.com/pymupdf/RAG"
documentation = "https://pymupdf4llm.readthedocs.io/en/latest/"
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pymupdf/RAG/issues"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = ">=1.24.3"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pyinstrument = "^4.6.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"


[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
